# cdecl

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .travis.yml  AUTHORS  ChangeLog  Doxyfile  Doxygen.sed  Makefile.am  NEWS  README-2.5.txt  README-blocks.txt  README.md  Tk2thekrew@yahoo.com  bootstrap  cdecl.css  configure.ac  lcovrc  makedoc.sh  travis.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  enhancement-request.md
lib/: .gitignore  Makefile.am  alloca.in.h  btowc.c  ctype.in.h  errno.in.h  fnmatch.in.h  getdelim.c  getline.c  getopt.c  gettext.h  hard-locale.c  hard-locale.h  inttypes.in.h  isblank.c  lc-charset-dispatch.c  lc-charset-dispatch.h  localcharset.c  localcharset.h  locale.in.h  mbrtowc-impl-utf8.h  mbrtowc-impl.h  mbrtowc.c  mbsinit.c  mbsrtowcs-impl.h  mbsrtowcs-state.c  mbsrtowcs.c  mbtowc-impl.h  mbtowc-lock.c  mbtowc-lock.h  mbtowc.c  memchr.c  memchr.valgrind  mempcpy.c  setlocale-lock.c  setlocale_null.c  setlocale_null.h  stdarg.in.h  stdbool.in.h  stddef.in.h  (+21 more)
m4/: gnulib-cache.m4  gnulib-comp.m4  pjl_check_compile_flag.m4  pjl_compile.m4  update_m4.sh
man/: Makefile.am
man/man1/: Makefile.am  c++decl.1  cdecl.1
share/: Makefile.am
share/bash-completions/: Makefile.am
share/bash-completions/completions/: Makefile.am  _cdecl
share/man/: .gitignore  Makefile.am
share/man/man1/: Makefile.am  c++decl.1  cdecl.1
share/zsh/: Makefile.am
share/zsh/site-functions/: Makefile.am  _cdecl
src/: .gitattributes  .gitignore  .lldbinit  Makefile.am  ast.c  ast.h  ast_check.c  ast_util.c  ast_util.h  autocomplete.c  autocomplete.h  bit_util.c  bit_util.h  c_ast.c  c_ast.h  c_ast_check.c  c_ast_check.h  c_ast_util.c  c_ast_util.h  c_ast_warn.c  c_ast_warn.h  c_keyword.c  c_keyword.h  c_kind.c  c_kind.h  c_lang.c  c_lang.h  c_operator.c  c_operator.h  c_sglob.c  c_sglob.h  c_sname.c  c_sname.h  c_type.c  c_type.h  c_typedef.c  c_typedef.h  cdecl.c  cdecl.h  cdecl_command.c  (+104 more)
test/: Makefile.am  not_in_Makefile.sh  run_test.sh  update_test.sh
test/data/: cast.cdeclrc  cast_error.cdeclrc  config_err-1.cdeclrc  config_using_i.cdeclrc  declare-error.cdeclrc  explain-error-5.cdeclrc  explain_i.cdecl  explain_x.cdecl  include-err-1.cdeclrc  include-err-2.cdeclrc  include-recursive.cdeclrc  include_1.cdeclrc  include_2.cdeclrc
test/data/xdg/: cdecl
test/expected/: 2c_typedef_i.out  2define_k_define_2k_show.out  2k_typedef_i.out  __declspec.out  alt-tokens.out  alttokens.out  bad_cli_options.out  c-comments.out  c_namespace_c.out  cast-error.out  cast.out  cast_+i.out  cast_a.out  cast_a3i.out  cast_blii_d.out  cast_ci.out  cast_cpa3cpa5i.out  cast_cpa3pa5i.out  cast_cpa9ci.out  cast_cpa9i.out  cast_cpbv_pi.out  cast_cpcpi.out  cast_cpfv_pi.out  cast_cpi.out  cast_cppi.out  cast_f_i.out  cast_pa.out  cast_pa3cpa5i.out  cast_pa3pa5i.out  cast_pa9i.out  cast_pblv_pi.out  cast_pc.out  cast_pcc.out  cast_pci.out  cast_pcpi.out  cast_pfi_i-cknr.out  cast_pfii_i.out  cast_pfkr_i-c17.out  cast_pfkr_i-cknr.out  cast_pfpci_ri.out  (+1786 more)
test/tests/: .gitignore  2c_typedef_i.test  2define_k_define_2k_show.test  2k_typedef_i.test  README.md  __declspec.test  ac-cast_into.exp  ac-declare.exp  ac-explain.exp  ac-help.exp  ac-set.exp  ac-show.exp  alt-tokens.test  alttokens.test  bad_cli_options.test  c-comments.test  c_namespace_c.test  c_ns_c.test  cast-error.test  cast.test  cast_+i.test  cast_a3i.test  cast_au.test  cast_bii_d.test  cast_ci.test  cast_constant.test  cast_cpa3cpa5i.test  cast_cpa3pa5i.test  cast_cpa9ci.test  cast_cpa9i.test  cast_cpblv_pi.test  cast_cpbv_pi.test  cast_cpcpi.test  cast_cpfv_pi.test  cast_cpi.test  cast_cppi.test  cast_cvpi.test  cast_f_i.test  cast_gi.test  cast_ll.test  (+2188 more)
